# notify-on-public-ip-change

./: README.md  pyproject.toml
notify_ip/: __main__.py  config.py  loop.py  server.py
