[tool.poetry]
name = "notify-on-public-ip-change"
version = "0.1.0"
description = "Simple notifier when your public ip changes."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
apprise = "^0.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
